Project added: Vitruvian

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
 
 				<div class="fh5co-col-2">
 					<div class="fh5co-item">
+						<a href="vitruvian.html" class="transition animate-box">
+							<img src="images/vitruvian_0.PNG" alt="iOS applications">
+						</a>
+					</div>
+					<div class="fh5co-item">
 						<a href="vanongo.html" class="transition animate-box">
 							<img src="images/vanongo_cover.jpeg" alt="iOS applications">
 						</a>
@@ -129,14 +134,9 @@
 							<img src="images/vgorode_cover.png" alt="iOS applications">
 						</a>
 					</div>
-					<!-- <div class="fh5co-item">
-						<a href="about.html" class="transition animate-box">
-							<img src="images/afisha_cover.jpg" alt="iOS applications">
-						</a>
-					</div> -->
 
 					<div id="fh5co-footer" class="padding-left">
-						<p><small>&copy; 2024 Artem Demchenko. All Rights Reserved. </small></p>
+						<p><small>&copy; 2025 Artem Demchenko. All Rights Reserved. </small></p>
 						<ul class="fh5co-social">
 							<li><a href="https://www.linkedin.com/in/artem-demchenko-58006610b"><i class="icon-linkedin-with-circle"></i></a></li>
 							<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
