Fix: Comviq png -> jpg images

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					</div>
 					<div class="fh5co-item">
 						<a href="comviq.html" class="transition animate-box">
-							<img src="images/comviq_cover.png" alt="iOS applications">
+							<img src="images/comviq_0.jpg" alt="iOS applications">
 						</a>
 					</div>
 
