--- a/comviq.html
+++ b/comviq.html
@@ -95,8 +95,8 @@
 					</div>
 					
 					<div class="fh5co-item">
-						<a href="images/comviq_0.png" class="image-popup animate-box">
-							<img src="images/comviq_0.png" alt="Comviq" title="Sweden telecom">
+						<a href="images/comviq_0.jpg" class="image-popup animate-box">
+							<img src="images/comviq_0.jpg" alt="Comviq" title="Sweden telecom">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -105,8 +105,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/comviq_1.png" class="image-popup animate-box">
-							<img src="images/comviq_1.png" alt="Comviq" title="Sweden telecom">
+						<a href="images/comviq_1.jpg" class="image-popup animate-box">
+							<img src="images/comviq_1.jpg" alt="Comviq" title="Sweden telecom">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -118,8 +118,8 @@
 
 				<div class="fh5co-col-2">
 					<div class="fh5co-item">
-						<a href="images/comviq_2.png" class="image-popup animate-box">
-							<img src="images/comviq_2.png" alt="Comviq" title="Sweden telecom">
+						<a href="images/comviq_2.jpg" class="image-popup animate-box">
+							<img src="images/comviq_2.jpg" alt="Comviq" title="Sweden telecom">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -128,8 +128,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/comviq_3.png" class="image-popup animate-box">
-							<img src="images/comviq_3.png" alt="Comviq" title="Sweden telecom">
+						<a href="images/comviq_3.jpg" class="image-popup animate-box">
+							<img src="images/comviq_3.jpg" alt="Comviq" title="Sweden telecom">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -138,8 +138,8 @@
 						</a>
 					</div>					
 					<div class="fh5co-item">
-						<a href="images/comviq_4.png" class="image-popup animate-box">
-							<img src="images/comviq_4.png" alt="Comviq" title="Sweden telecom">
+						<a href="images/comviq_4.jpg" class="image-popup animate-box">
+							<img src="images/comviq_4.jpg" alt="Comviq" title="Sweden telecom">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
