--- a/about.html
+++ b/about.html
@@ -67,12 +67,15 @@
 	<div id="fh5co-main" role="main">
 		
 		<div class="container">
-					<div class="fh5co-col-2">
-						<!-- <div class="col-md-8 col-md-push-4 fh5co-heading"> -->
-							<h1>A little about me:</h1>
-							<p>More than 10 years in software development, above 7 years of experience in iOS development. I offer expertise in mobile applications development, software development, testing, maintaining and documenting codebase.</p>
-						<!-- </div> -->
-					</div>
+			<div style="padding: 20px;">
+  				<a href="index.html" class="btn btn-primary">←</a>
+			</div>
+			<div class="fh5co-col-2">
+				<!-- <div class="col-md-8 col-md-push-4 fh5co-heading"> -->
+					<h1>A little about me:</h1>
+					<p>More than 10 years in software development, above 7 years of experience in iOS development. I offer expertise in mobile applications development, software development, testing, maintaining and documenting codebase.</p>
+				<!-- </div> -->
+			</div>
 			<div id="fh5co-footer">
 				<p><small>&copy; 2024 Demchenko A.V. All Rights Reserved. </small></p>
 				<ul class="fh5co-social">
