--- a/kenogo.html
+++ b/kenogo.html
@@ -71,6 +71,9 @@
 	<div id="fh5co-main" role="main">
 		
 		<div class="container">
+			<div style="padding: 20px;">
+  				<a href="index.html" class="btn btn-primary">←</a>
+			</div>
 			
 			<div class="row">
 				<div class="col-md-8 col-md-push-4 fh5co-heading">
