--- a/vanongocustomer.html
+++ b/vanongocustomer.html
@@ -75,7 +75,9 @@
 	<div id="fh5co-main" role="main">
 		
 		<div class="container">
-			
+			<div style="padding: 20px;">
+  				<a href="index.html" class="btn btn-primary">←</a>
+			</div>
 			
 
 			<div class="row">
